# scientifig

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
figstylepy/: __init__.py  figstyle.py
figstylepy/mplstyle/: paper.mplstyle  presentation.mplstyle  presentation_black.mplstyle
scientifig/: __init__.py  figstyle.py  scientifig.py
scientifig/mplstyle/: crazy_style.mplstyle  paper.mplstyle  poster.mplstyle  presentation.mplstyle
tests/: demo.ipynb  test_figstyle.py  testing.ipynb
